adding LED toggle as well as setting PHY

--- a/Backplane.X/nbproject/Makefile-genesis.properties
+++ b/Backplane.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,10 @@
 #
-#Mon May 17 17:12:57 PDT 2021
-default.languagetoolchain.version=2.32
-default.Pack.dfplocation=/home/mobbad/.mchp_packs/Microchip/PIC18F-K_DFP/1.2.72
+#Tue May 18 17:48:23 PDT 2021
+default.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.40\\packs\\Microchip\\PIC18F-K_DFP\\1.2.72
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v2.10\\bin
+configurations-xml=f612597aed596c5a887340697176df9a
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=9db8f8a224aa17d0023ea7f468f871dc
+default.languagetoolchain.version=2.10
+host.platform=windows
 conf.ids=default
-default.languagetoolchain.dir=/opt/microchip/xc8/v2.32/bin
-host.id=k2n7-4fg9-2
-configurations-xml=999189cc6fa2a6f1db81c87b6b6f66d7
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
-default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
-proj.dir=/home/mobbad/workspace/empr/gen3BackplaneSoftware/Backplane.X
-host.platform=linux
+default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d294c249eba4bad913d547c4bcb54386
